--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <p class="buttonname">Flipkart</p>  
               </a>
               
-                <a href="https://github.com/vinodjangid07" target="_blank" class="amazon socialbuttons">
+                <a href="https://www.amazon.in/s?k=axocean&crid=FVF9ASFP6CJ0&sprefix=axocean%2Caps%2C218&ref=nb_sb_noss_1" target="_blank" class="amazon socialbuttons">
                     <img src="./Images/Amazonlogo.png" alt="">
                  <p class="buttonname">Amazon</p>   
                 </a>
                
                 <a href="https://www.linkedin.com/in/vinod-jangid-b401111a1?original_referer=" class="youtube socialbuttons" target="_blank">
-                    <img src="" alt="">
+                    <img src="./Images/youtubelogo.png" alt="">
                   <p class="buttonname">Youtube</p>  
                 </a>
             </div>
