--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000">
-    <meta name="description" content=" AXOCEAN| Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." >
-    <meta name="keywords" content="vinod jangid, vinod jangid portfolio,Vinod Jangid Portfolio, vinodjangid, vinod jangid github vinod jangid uiverse, uiverse, Uiverse, vinodjangid social app" >
+    <meta name="description" content="All items are hand made from start to finish with great detail and to a very high standard." >
+    <meta name="keywords" content="axocean, axocean online, axocean shop,axocean jitesh, axocean, axocean github, axocean flipkart, amazon axocean, Axocean, axocean social app" >
     <meta name="author" content="Axocean" >
+  <!--  -->
+  <meta property="og:image" content="https://www.axocean.online/Images/profile.png" />
 
-    <title>Axocean</title>
-    <link rel="icon" type="image/x-icon" href="">
+  <meta property="og:title" content="Axocean Online" />
+  <meta property="og:description"
+    content="All items are hand made from start to finish with great detail and to a very high standard." />
+
+  <meta property="og:url" content="https://www.axocean.online/" />
+  <meta property="og:site_name" content="Axocean Online" />
+  <meta name="twitter:title" content="Axocean Online" />
+  <meta name="twitter:image" content="https://www.axocean.online/Images/profile.png" />
+  <meta name="twitter:url" content="https://www.axocean.online/" />
+  <!--  -->
+    <title>Axocean Online</title>
+    <link rel="icon" type="image/x-icon" href="./Images/IYZmk5JSSewTJChfptm6ShSYH0L-VMvn.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +36,7 @@
         </div>
         <div class="mainContainer">
             <div class="profileSection">
-                <img src="./Images/profile.png" alt="">
+                <img src="./Images/IYZmk5JSSewTJChfptm6ShSYH0L-VMvn.webp" alt="">
                 <h1 class="ProfileHeading">AXOCEAN</h1>
                 <p class="aboutdescription">"Shop, like, and follow us across the digital waves."<br> <p class="hashtag">#AxoceanJourney</p>
                 </p>
@@ -35,17 +47,17 @@
                     <p class="buttonname">Official Website</p>
                 </a>
 
-                <a href="https://uiverse.io/profile/vinodjangid07" target="_blank" class="flipkart socialbuttons">
+                <a href="https://www.flipkart.com/axocean-bow-hair-black-clip-accessories-women-girls-baby-clip-black-clip/p/itm24eee0617b44a" target="_blank" class="flipkart socialbuttons">
                   <img src="./Images/flipkart logo.png" alt="">
                 <p class="buttonname">Flipkart</p>  
               </a>
               
-                <a href="https://www.amazon.in/s?k=axocean&crid=FVF9ASFP6CJ0&sprefix=axocean%2Caps%2C218&ref=nb_sb_noss_1" target="_blank" class="amazon socialbuttons">
+                <a href="https://www.amazon.in/AXOCEAN-Satin-Accessories-Variations-Available/dp/B0CLLDN7MZ" target="_blank" class="amazon socialbuttons">
                     <img src="./Images/Amazonlogo.png" alt="">
                  <p class="buttonname">Amazon</p>   
                 </a>
                
-                <a href="https://www.linkedin.com/in/vinod-jangid-b401111a1?original_referer=" class="youtube socialbuttons" target="_blank">
+                <a href="https://www.youtube.com/@axocean" class="youtube socialbuttons" target="_blank">
                     <img src="./Images/youtubelogo.png" alt="">
                   <p class="buttonname">Youtube</p>  
                 </a>
