--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000">
     <meta name="description" content="All items are hand made from start to finish with great detail and to a very high standard." >
-    <meta name="keywords" content="axocean, axocean online, axocean shop,axocean jitesh, axocean, axocean github, axocean flipkart, amazon axocean, Axocean, axocean social app" >
+    <meta name="keywords" content="axocean,axocean online,axocean shop,axocean jitesh,axocean jaipur,axocean github,axocean flipkart,amazon axocean,Axocean,axocean social app" >
     <meta name="author" content="Axocean" >
   <!--  -->
   <meta property="og:image" content="https://www.axocean.online/Images/profile.png" />
