--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000">
     <meta name="description" content="All items are hand made from start to finish with great detail and to a very high standard." >
     <meta name="keywords" content="axocean,axocean online,axocean shop,axocean jitesh,axocean jaipur,axocean github,axocean flipkart,amazon axocean,Axocean,axocean social app" >
     <meta name="author" content="Axocean" >
   <!--  -->
-  <meta property="og:image" content="https://www.axocean.online/Images/profile.png" />
+  <meta property="og:image" content="https://www.axocean.online/Images/profile.webp" />
 
   <meta property="og:title" content="Axocean Online" />
   <meta property="og:description"
@@ -17,11 +17,11 @@
   <meta property="og:url" content="https://www.axocean.online/" />
   <meta property="og:site_name" content="Axocean Online" />
   <meta name="twitter:title" content="Axocean Online" />
-  <meta name="twitter:image" content="https://www.axocean.online/Images/profile.png" />
+  <meta name="twitter:image" content="https://www.axocean.online/Images/profile.webp" />
   <meta name="twitter:url" content="https://www.axocean.online/" />
   <!--  -->
     <title>Axocean Online</title>
-    <link rel="icon" type="image/x-icon" href="./Images/IYZmk5JSSewTJChfptm6ShSYH0L-VMvn.jpg">
+    <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -48,17 +48,17 @@
                 </a>
 
                 <a href="https://www.flipkart.com/axocean-bow-hair-black-clip-accessories-women-girls-baby-clip-black-clip/p/itm24eee0617b44a" target="_blank" class="flipkart socialbuttons">
-                  <img src="./Images/flipkart logo.png" alt="">
+                  <img src="./Images/flipkart logo.webp" alt="">
                 <p class="buttonname">Flipkart</p>  
               </a>
               
                 <a href="https://www.amazon.in/AXOCEAN-Satin-Accessories-Variations-Available/dp/B0CLLDN7MZ" target="_blank" class="amazon socialbuttons">
-                    <img src="./Images/Amazonlogo.png" alt="">
+                    <img src="./Images/Amazonlogo.webp" alt="">
                  <p class="buttonname">Amazon</p>   
                 </a>
                
                 <a href="https://www.youtube.com/@axocean" class="youtube socialbuttons" target="_blank">
-                    <img src="./Images/youtubelogo.png" alt="">
+                    <img src="./Images/youtubelogo.webp" alt="">
                   <p class="buttonname">Youtube</p>  
                 </a>
             </div>
@@ -72,7 +72,7 @@
     window.addEventListener("load", function () {
     setTimeout(function() {
         loader.style.display = "none";
-        }, 500);
+        }, 300);
   
         document.addEventListener("contextmenu", function(e){
   if (e.target.nodeName === "IMG") {
